--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Meghna Swami.</h1>
-            <h3>I'm an Indian based <span>Technical Recruiter/ HR</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm an Indian based <span>Technical Recruiter</span>, <span>IT Human resource Manager</span> and <span>IT recruiter</span> who works with the Human resources and recruiting for a technical company for the national or Internation resources. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
-            <ul class="social">
+           <!-- <ul class="social">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
@@ -69,7 +68,7 @@
                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
-            </ul>
+            </ul>-->
          </div>
       </div>
 
