About me and contact details

--- a/index.html
+++ b/index.html
@@ -95,12 +95,7 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>A young aspirant, with excellent communication skills both verbal and written. I carry more than 2 years of experience in Human Resource management and recruiting life cycle. A confident person who understands the ethics of, team management, team building, judging a resource and recruitement life cycle. I have worked with multiple comapnies as a technical recruiter with some of the industry giants such as, Apple, BCBS, Yahoo and PayPal. I am formally looking forward to work as a Human Resource manager full time with some of the tehnical firms.
             </p>
 
             <div class="row">
@@ -109,12 +104,12 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>Jaipur</span><br>
+						   <span>Rajasthan, India<br>
+						         302020
+                     <!--</span><br>
+						   <span>(123)456-7890</span><br>-->
+                     <span>MeghnaSpeaks.github.io</span>
 					   </p>
 
                </div>
