--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
 
    <!-- Call-To-Action Section
-   ================================================== -->
+   ================================================== 
    <section id="call-to-action">
 
       <div class="row">
@@ -589,7 +589,7 @@
 					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
 					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. --></p>
 
-         </div>
+        <!-- </div>
 
          <div class="three columns action">
 
@@ -599,7 +599,7 @@
 
       </div>
 
-   </section> <!-- Call-To-Action Section End-->
+   </section>  Call-To-Action Section End-->
 
 
    <!-- Testimonials Section
