--- a/index.html
+++ b/index.html
@@ -657,6 +657,8 @@
 
    <!-- Contact Section
    ================================================== -->
+   <h21>Super Cool Studio</21>
+   
    <section id="contact">
 
          <div class="row section-head">
