--- a/index.html
+++ b/index.html
@@ -657,13 +657,12 @@
 
    <!-- Contact Section
    ================================================== -->
-   <h21>Super Cool Studio</21>
-   
    <section id="contact">
 
          <div class="row section-head">
 
             <div class="two columns header-col">
+            <h1>Contact me</h1>
 
                <h1><span>Get In Touch.</span></h1>
 
