SuperCool removed from footer

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
+                  <!--<h3>Super Cool Studio</h3>-->
                   <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
 
                   <p>
@@ -662,8 +662,7 @@
          <div class="row section-head">
 
             <div class="two columns header-col">
-            <h1>Contact me</h1>
-
+            
                <h1><span>Get In Touch.</span></h1>
 
             </div>
