--- a/index.html
+++ b/index.html
@@ -624,11 +624,10 @@
 
                      <li>
                         <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                           <p>A much trusted and productive resource to work with. Have had one of the best experiences in working with her. Much recommended
                            </p>
-                           <cite>Steve Jobs</cite>
+                           <cite>Renu Dubey</cite>
+                           <br>Team Lead Technical Recruitement</br>
                         </blockquote>
                      </li> <!-- slide ends -->
 
@@ -708,6 +707,8 @@
 
                   <div>
                      <button class="submit">Submit</button>
+                     <a href="mailto:saurabh.bhatia0990@gmail.com@example.com?Subject=<subject>" target="_top">
+Send Mail</a>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
@@ -723,12 +724,12 @@
                   <i class="fa fa-check"></i>Your message was sent, thank you!<br>
 				   </div>
 
-            </div>
+            <!--</div>
 
 
             <aside class="four columns footer-widgets">
 
-               <div class="widget widget_contact">
+              <div class="widget widget_contact">
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
@@ -738,9 +739,9 @@
 						   <span>(123) 456-7890</span>
 					   </p>
 
-				   </div>
+				   </div>-->
 
-               <div class="widget widget_tweets">
+               <!--<div class="widget widget_tweets">
 
                   <h4 class="widget-title">Latest Tweets</h4>
 
@@ -752,11 +753,10 @@
                         <a href="#">http://t.co/CGIrdxIlI3</a>
                         </span>
                         <b><a href="#">2 Days Ago</a></b>
-                     </li>
+                     </li>-->
                      <li>
                         <span>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                        eaque ipsa quae ab illo inventore veritatis et quasi
+                        You may drop me an email.
                         <a href="#">http://t.co/CGIrdxIlI3</a>
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
