--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                <div class="columns download">
                   <p>
                      <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="resume/Custom elearning solution-PSS-19th August" target="_self">Tutorials Point</a>
                   </p>
                </div>
 
