--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
-                     <a href="resume/Custom elearning solution-PSS-19th August" target="_self">Tutorials Point</a>
+                     <a href="resume/download.pdf" class="button" target="_self"><i class="fa fa-download"></i>Download Resume</a>
+                    
                   </p>
                </div>
 
