--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						         302020
                      <!--</span><br>
 						   <span>(123)456-7890</span><br>-->
-                     <span>MeghnaSpeaks.github.io</span>
+                     <span><br>sm.meghna@gmail class="com"</gmail></br></span>
 					   </p>
 
                </div>
@@ -148,8 +148,8 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>Rajasthan University</h3>
+                  <p class="info">Graduation in Arts <span>&bull;</span> <em class="date">November 2014</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -246,21 +246,18 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>I am taking an opportunity to rate my skills; as per, the level of expertise and, the capatbilities I have in me.
             </p>
 
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
-						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+					   <li><span class="bar-expand photoshop"></span><em>Recruitement</em></li>
+                  <li><span class="bar-expand illustrator"></span><em>Candidate Handling</em></li>
+						<li><span class="bar-expand wordpress"></span><em>Human Resource management</em></li>
+						<li><span class="bar-expand css"></span><em>Recruitement Lifecycle</em></li>
+						<li><span class="bar-expand html5"></span><em>Documentation for Candidate</em></li>
+                  <li><span class="bar-expand jquery"></span><em>Communication skills</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
@@ -669,10 +666,10 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                  <!--<p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
                   eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
                   voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                  </p>
+                  </p>-->
 
             </div>
 
@@ -707,9 +704,7 @@
                   </div>
 
                   <div>
-                     <button class="submit">Submit</button>
-                     <a href="mailto:saurabh.bhatia0990@gmail.com@example.com?Subject=<subject>" target="_top">
-Send Mail</a>
+                     <a href="mailto:saurabh.bhatia0990@gmail.com@example.com?Subject=<subject>" target="_top"button class="submit">Submit</button></a>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
@@ -755,13 +750,13 @@ Send Mail</a>
                         </span>
                         <b><a href="#">2 Days Ago</a></b>
                      </li>-->
-                     <li>
+                    <!-- <li>
                         <span>
                         You may drop me an email.
                         <a href="#">http://t.co/CGIrdxIlI3</a>
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
-                     </li>
+                     </li>-->
                   </ul>
 
 		         </div>
