css and index modified

--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
                   <h3>School of Cool Designers</h3>
                   <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
 
-                  <p>
+                  <!--<p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
                   Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
                   nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
                   ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
+                  </p>-->
 
                </div>
 
@@ -246,11 +246,11 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+            <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
             eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
             voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
             voluptatem sequi nesciunt.
-            </p>
+            </p>-->
 
 				<div class="bars">
 
@@ -669,10 +669,7 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                  </p>
+                  <p style="background-color:#FFF class="lead">Send me an email</p>
 
             </div>
 
@@ -680,10 +677,12 @@
 
          <div class="row">
 
-            <div class="eight columns">
+            <div class="eight columns centered">
+             <a style="background:#333"href="mailto:saurabh.bhatia0990@gmail.com@example.com?Subject=<subject>" class="button" target="_top"><i class="fa icon-mail-1"></i>
+Send Mail</a>
 
                <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
+               <!--<form action="" method="post" id="contactForm" name="contactForm">
 					<fieldset>
 
                   <div>
@@ -716,7 +715,7 @@ Send Mail</a>
                   </div>
 
 					</fieldset>
-				   </form> <!-- Form End -->
+				   </form>--> <!-- Form End -->
 
                <!-- contact-warning -->
                <div id="message-warning"> Error boy</div>
@@ -755,17 +754,18 @@ Send Mail</a>
                         </span>
                         <b><a href="#">2 Days Ago</a></b>
                      </li>-->
-                     <li>
+                     <!--<li>
                         <span>
                         You may drop me an email.
                         <a href="#">http://t.co/CGIrdxIlI3</a>
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
                      </li>
+                    
                   </ul>
 
 		         </div>
-
+ -->
             </aside>
 
       </div>
